<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:titleTextColor="@android:color/white" />


    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"
        android:layout_above="@+id/llAds">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="18dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/directChatInfo"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/directChatInfoNote"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/ic_edit_text_box"
                            android:gravity="start">

                            <EditText
                                android:id="@+id/etMessage"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/background_edit_text"
                                android:gravity="start"
                                android:hint="@string/enterMessage"
                                android:inputType="textMultiLine" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <com.hbb20.CountryCodePicker
                                android:id="@+id/ccp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center" />

                            <EditText
                                android:id="@+id/etNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/background_edit_text"
                                android:hint="@string/enterNumber"
                                android:inputType="phone" />
                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            app:cardCornerRadius="7dp"
                            app:cardElevation="3dp"
                            app:cardUseCompatPadding="true">

                            <RelativeLayout
                                android:id="@+id/rlSend"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@color/colorPrimary">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:text="@string/sends"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" />
</RelativeLayout>