<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".emoji.activities.TextToEmojiActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:id="@+id/appBar"
        android:theme="@style/AppTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme"
            app:title="Text to Emoji"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:titleTextColor="@android:color/white" />



    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/llAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llAds"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1.0"
                    android:hint="@string/chatText"
                    android:backgroundTint="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:autofillHints="username" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/to"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etEmoji"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0.4"
                    android:hint="@string/emoji"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="textShortMessage"
                    android:maxLength="2"
                    android:text=""
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnConvert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:padding="5dp"
                    android:background="@drawable/ic_button_back"
                    android:textColor="@color/white"
                    android:text="@string/transform" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="60dp"
                android:gravity="end"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="45dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/tvConverted"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:inputType="textMultiLine"
                            android:lineSpacingExtra="4dp"
                            android:paddingBottom="8dp"
                            android:paddingLeft="40dp"
                            android:paddingTop="8dp"
                            android:background="@null"
                            android:scrollbars="vertical"
                            android:textSize="12sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginBottom="16dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginEnd="5dp"
                                android:background="@drawable/circle">

                                <ImageView
                                    android:id="@+id/ivCopy"
                                    android:layout_width="22dp"
                                    android:layout_height="22dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:padding="2dp"
                                    android:src="@drawable/ic_baseline_content_copy_24"
                                    app:tint="@color/white" />
                            </RelativeLayout>



                            <RelativeLayout
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginEnd="5dp"
                                android:background="@drawable/circle">

                                <ImageView
                                    android:id="@+id/ivDelete"
                                    android:layout_width="22dp"
                                    android:layout_height="22dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:padding="2dp"
                                    android:src="@drawable/ic_baseline_delete_24"
                                    app:tint="@color/white" />
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_marginEnd="5dp"
                                android:background="@drawable/circle">

                                <ImageView
                                    android:id="@+id/ivShare"
                                    android:layout_width="22dp"
                                    android:layout_height="22dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:padding="2dp"
                                    android:src="@drawable/ic_baseline_share_24"
                                    app:tint="@color/white" />
                            </RelativeLayout>

                        </LinearLayout>

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>